--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,11 @@ a:hover{
     text-decoration-color: rgb(181, 181, 181)
 
 }
+
+.logo{
+    font-size: 2rem;
+}
+
+.logo:hover{
+    cursor: default;
+}
