--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,14 @@ a:hover{
     transform: none;
 }
 
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container{
+    display: flex;
+}
