--- a/styles.css
+++ b/styles.css
@@ -160,48 +160,51 @@ section{
     display: flex;
 }
 
-/* profile section*/
+/* PROFILE SECTION */
 
-#profile{
+#profile {
     display: flex;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
-}
+  }
 
-.section__pic-container{
+  .section__pic-container {
     display: flex;
     height: 400px;
     width: 400px;
-    margin: 0 auto;
-}
+    margin: auto 0;
+  }
 
-.section__text{
+  .section__text {
     align-self: center;
     text-align: center;
-}
+  }
 
-.section__text p{
+  .section__text p {
     font-weight: 600;
-}
+  }
 
-.section__text__p2{
+  .section__text__p1 {
     text-align: center;
+  }
+
+  .section__text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
-}
+  }
 
-.title{
+  .title {
     font-size: 3rem;
     text-align: center;
-}
+  }
 
-#socials-container{
+  #socials-container {
     display: flex;
     justify-content: center;
     margin-top: 1rem;
     gap: 1rem;
-}
+  }
 
 .icon{
     cursor: pointer;
