--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -24,6 +24,10 @@
     .experience-details-container {
       margin-top: 2rem;
     }
+
+    #profile{
+      margin-top: 100px;
+    }
     #profile,
     .section-container {
       display: block;
@@ -45,6 +49,79 @@
     }
     .about-containers {
       margin-top: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      width: 90%;
+    }
+
+    .nav__menu {
+      position: fixed;
+      right: 0.5rem;
+      top: 3.8rem;
+      flex-direction: column;
+      gap: 0;
+      width: fit-content;
+      display: none; /* Initially hidden on small screens */
+    }
+
+    .nav__toggle-open,
+    .nav__toggle-close {
+      display: inline-flex; /* Use inline-flex for consistent sizing and alignment */
+      font-size: 1.8rem;
+      color: black;
+      width: 40px; /* Ensure toggle buttons also have a fixed width */
+      height: 40px; /* Ensure toggle buttons also have a fixed height */
+    }
+
+    .nav__toggle-close {
+      display: none; /* Close button hidden by default */
+    }
+
+
+    .nav__menu li{
+        width: 100%;
+        perspective: 250px;
+    }
+
+
+    .nav__menu li a{
+        background: gray;
+        padding: 1rem 4rem;
+        width: 100%;
+        display: block;
+        border-top: 1px solid var(--color-gray-300);
+        text-align: center;
+        box-shadow: -2rem 5rem 5rem rgba(0, 0, 0, 0.3);
+    }
+
+    .nav__menu li {
+        transform: rotateX(90deg);
+        opacity: 0;
+        animation: navKey 500ms ease-in-out forwards;
+        transform-origin: top;
+    }
+
+    .nav__menu li:nth-child(2){
+        animation-delay: 100ms;
+    }
+    .nav__menu li:nth-child(3){
+        animation-delay: 200ms;
+    }
+    .nav__menu li:nth-child(4){
+        animation-delay: 300ms;
+    }
+    .nav__menu li:nth-child(5){
+        animation-delay: 400ms;
+    }
+
+    @keyframes navKey{
+        to{
+            transform: rotateX(0deg);
+            opacity: 1;
+        }
     }
   }
 
