--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -88,13 +88,16 @@
 
 
     .nav__menu li a{
-        background: gray;
+        background: rgb(245, 243, 243);
         padding: 1rem 4rem;
+        margin-top: 2px;
         width: 100%;
         display: block;
-        border-top: 1px solid var(--color-gray-300);
+        border-bottom: 1px solid rgb(99, 99, 99);
         text-align: center;
-        box-shadow: -2rem 5rem 5rem rgba(0, 0, 0, 0.3);
+        box-shadow: -1.5rem 5rem 5rem rgba(0, 0, 0, 0.3);
+        /* text-decoration: none; */
+        color: rgb(99, 99, 99);
     }
 
     .nav__menu li {
