back to top scroll button

--- a/styles.css
+++ b/styles.css
@@ -388,13 +388,27 @@ article .icon {
   height: 2.5rem;
 }
 
-/* FOOTER SECTION */
-
-footer {
-  height: 26vh;
-  margin: 0 1rem;
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: none; /* Initially hidden */
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 20px;
+  z-index: 1000;
+  cursor: pointer;
+  transition: opacity 0.3s;
 }
 
-footer p {
-  text-align: center;
+.back-to-top:hover {
+  background-color: #555;
 }
+
+.back-to-top i {
+  font-size: 1.5rem;
+}
+
+
