--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,7 @@ section {
 
 .btn-color-2 {
   background: none;
+  color:rgb(53, 53, 53)
 }
 
 .btn-color-2:hover {
@@ -384,8 +385,31 @@ article .icon {
   border: 1px solid #ccc;
   border-radius: 5px;
   text-align: center;
-  transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s ease;
 }
+
+/* Project Card Styles */
+.project {
+  border: 1px solid #ddd;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  background-color: #f9f9f9;
+  transition: box-shadow 0.3s ease;
+}
+
+.project:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+/* Buttons Container */
+.project-buttons {
+  margin: 1.3rem 0;
+  font-size: 0.8rem;
+  display: flex;
+  gap: 1rem;
+}
+
 
 .project img {
   max-width: 100%;
