footer, socilas icons styles

--- a/styles.css
+++ b/styles.css
@@ -199,8 +199,23 @@ section {
 #socials-container {
   display: flex;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 1.7rem;
   gap: 1rem;
+}
+
+#socials-container a{
+    background: var(--color-gray-200);
+    color: var(--color-gray-900);
+    padding: 0.5rem;
+    display: inline-block;
+    border-radius: var(--radius-4);
+    transition: var(--transition);
+}
+
+#socials-container a:hover{
+    background: black;
+    color: var(--color-gray-100);
+    transform: translate(-0.5rem, 0.5rem);
 }
 
 /* ICONS */
@@ -383,7 +398,7 @@ article .icon {
   background-color: #f9f9f9;
   padding: 1rem;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   text-align: center;
   transition: box-shadow 0.3s ease;
 }
@@ -462,6 +477,57 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+footer{
+  background: hsl(var(--primary-hue), 5%, 5%);
+  padding-top: 2rem;
+}
+
+.footer__menu{
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+}
+
+.footer__menu a{
+  color: hsl(var(--primary-hue), 5%, 70%);
+  transition: var(--transition);
+}
+
+.footer__menu a:hover{
+  color: #fff;
+}
+
+.footer__socials{
+  width: fit-content;
+  display: flex;
+  gap: 1.5rem;
+  margin: 1.5rem auto 2rem;
+}
+
+.footer__socials a{
+  background: #fff;
+  color: rgb(16, 1, 31);
+  padding: 0.6rem;
+  display: flex;
+  border-radius: 50%;
+  transition: var(--transition);
+}
+
+.footer__socials a:hover{
+  background: #868282;
+  color: #fff;
+  opacity: 0.7;
+  transform: translateY(-0.5rem);
+}
+
+.footer__copyright{
+  color: hsl(var(--primary-hue), 5%, 70%);
+  text-align: center;
+  border-top: 2px solid hsl(var(--primary-hue), 5%, 25%);
+  padding: 1.5rem 0;
+}
+
 
 .back-to-top {
   position: fixed;
