--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -40,7 +40,7 @@
       height: fit-content;
     }
     section {
-      margin: 0 5%;
+      margin: 0 %;
     }
     .section__pic-container {
       width: 275px;
@@ -53,9 +53,9 @@
   }
 
   @media (max-width: 768px) {
-    .container {
-      width: 90%;
-    }
+    /* .container {
+      width: 100%;
+    } */
 
     .nav__menu {
       position: fixed;
