--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,16 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
 }
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .container {
-  width: 80%;
+  width: 100%;
   margin-inline: auto;
 }
 
@@ -80,7 +82,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 10;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
@@ -94,6 +96,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 85%;
 }
 
 .nav__menu {
@@ -147,18 +150,25 @@ nav {
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
+  padding: 10vh 5vw;
   height: 96vh;
-  margin: 0 10rem;
+  width: 100%;
+  margin: 0 auto;
   box-sizing: border-box;
-  min-height: fit-content;
+  /* min-height: fit-content; */
 }
 
 .section-container {
   display: flex;
 }
 
+section:nth-child(odd){
+  background: var(--color-gray-200);
+}
+
 /* PROFILE SECTION */
+
+
 
 #profile {
   display: flex;
@@ -205,9 +215,7 @@ section {
 }
 
 #socials-container a{
-    background: var(--color-gray-200);
     color: var(--color-gray-900);
-    padding: 0.5rem;
     display: inline-block;
     border-radius: var(--radius-6);
     transition: var(--transition);
@@ -215,9 +223,8 @@ section {
 }
 
 #socials-container a:hover{
-    background: #868282;
-    color: #fff;
-    opacity: 0.7;
+
+    opacity: 0.6;
     transform: translateY(-0.5rem);
 }
 
@@ -241,7 +248,7 @@ section {
   transition: all 300ms ease;
   padding: 1rem;
   width: 8rem;
-  border-radius: 2rem;
+  border-radius: 20px;
 }
 
 .btn-color-1,
@@ -378,15 +385,15 @@ article .icon {
 
 .project__categories li {
   background-color: #f0f0f0;
-  padding: 0.6rem 1.2rem;
+  padding: 0.4rem 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
-  border-radius: 5px;
+  border-radius: 20px;
 }
 
 .project__categories li:hover,
 .project__categories .mixitup-control-active {
-  background-color: #333;
+  background-color: #646161;
   color: #fff;
 }
 
@@ -461,25 +468,32 @@ article .icon {
   padding: 0.5rem;
 }
 
-.contact-info-container {
+.contact__list{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  margin: 1rem;
+  gap: 1.4rem;
 }
 
-.contact-info-container p {
-  font-size: larger;
+.contact__list-item{
+  background: var(--color-gray-100);
+  padding: 1rem;
+  display: block;
+  text-align: center;
+  color: var(--color-gray-900);
+  border-radius: 50%;
+  font-size: 1.2rem;
+  transition: var(--transition);
+}
+
+.contact__list a:hover{
+    opacity: 0.6;
+    transform: translateY(-0.5rem);
 }
 
 .contact-icon {
   cursor: default;
 }
 
-.email-icon {
-  height: 2.5rem;
-}
+
 
 footer{
   background: hsl(var(--primary-hue), 5%, 5%);
@@ -518,9 +532,8 @@ footer{
 }
 
 .footer__socials a:hover{
-  background: #868282;
-  color: #fff;
-  opacity: 0.7;
+
+  opacity: 0.6;
   transform: translateY(-0.5rem);
 }
 
@@ -544,11 +557,12 @@ footer{
   font-size: 20px;
   z-index: 1000;
   cursor: pointer;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .back-to-top:hover {
   background-color: #555;
+  transition: var(--transition);
 }
 
 .back-to-top i {
