--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1400px) {
     #profile {
-      height: 83vh;
-      margin-bottom: 6rem;
+      /* height: 83vh; */
+      /* margin-bottom: 6r; */
     }
     .about-containers {
       flex-wrap: wrap;
@@ -25,9 +25,6 @@
       margin-top: 2rem;
     }
 
-    #profile{
-      margin-top: 100px;
-    }
     #profile,
     .section-container {
       display: block;
@@ -39,9 +36,7 @@
     .section-container {
       height: fit-content;
     }
-    section {
-      margin: 0 %;
-    }
+
     .section__pic-container {
       width: 275px;
       height: 275px;
@@ -129,12 +124,12 @@
   }
 
   @media screen and (max-width: 600px) {
-    #contact,
+    /* #contact,
     footer {
       height: 40vh;
-    }
+    } */
     #profile {
-      height: 83vh;
+      height: 90vh;
       margin-bottom: 0;
     }
     article {
