--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -129,8 +129,8 @@
       height: 40vh;
     } */
     #profile {
-      height: 90vh;
-      margin-bottom: 0;
+      /* height: 90vh; */
+      /* margin-bottom: 0; */
     }
     article {
       font-size: 1rem;
