--- a/styles.css
+++ b/styles.css
@@ -259,8 +259,8 @@ nav {
 .btn {
   font-weight: 600;
   transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
+  padding: 8px 5px;
+  width: 7rem;
   border-radius: 20px;
 }
 
@@ -440,7 +440,12 @@ article .icon {
   margin: 1.3rem 0;
   font-size: 0.8rem;
   display: flex;
+  justify-content: center;
   gap: 1rem;
+}
+
+.project-buttons .btn{
+  padding: 5px;
 }
 
 
