--- a/styles.css
+++ b/styles.css
@@ -14,34 +14,27 @@
 
 :root{
   --container-width-lg: 80%;
-  --container-width-sm: 94%;
 
-  --radius-1: 2rem;
-  --radius-2: 1.2rem;
-  --radius-3: 0.8rem;
-  --radius-4: 0.5rem;
-  --radius-5: 0.3rem;
-  --radius-6: 50%;
+
+  --radius-1: 50%;
+  --radius-2: 1rem;
 
   --transition: all 300ms ease;
 
-  --primary-hue: 358;
-  --color-primary: hsla(var(--primary-hue), 87%, 44%);
-  --color-nav-bg: hsla(var(--primary-hue), 0%, 100%, 0.4);
-  --color-gray-100: hsl(var(--primary-hue), 0%, 100%);
-  --color-gray-200: hsl(var(--primary-hue), 0%, 95%);
-  --color-gray-300: hsl(var(--primary-hue), 0%, 85%);
-  --color-gray-400: hsl(var(--primary-hue), 0%, 70%);
-  --color-gray-500: hsl(var(--primary-hue), 0%, 55%);
-  --color-gray-600: hsl(var(--primary-hue), 0%, 40%);
-  --color-gray-700: hsl(var(--primary-hue), 0%, 25%);
-  --color-gray-800: hsl(var(--primary-hue), 0%, 15%);
-  --color-gray-900: hsl(var(--primary-hue), 0%, 5%);
+  --nav-light-bg: rgba(255, 253, 253, 0.5);
+  --box-shadow-1: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  --color-gray-light: rgba(255, 255, 255, 0.945);
+  --color-gray-light-1: rgba(255, 255, 255, 0.842);
+  --color-gray-1: rgba(255, 253, 253, 0.5);
+  --color-gray-2: rgb(85, 85, 85);
+  --color-gray-3: rgb(99, 99, 99);
+  --color-gray-4: rgb(53, 53, 53);
+  --color-gray-5: rgb(187, 181, 181);
 }
 
 
 html, body {
-  font-family: "Poppins", sans-serif;
   width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -73,26 +66,93 @@ section {
 }
 
 section:nth-child(even){
-  background: var(--color-gray-200);
+  background: var(--color-gray-1);
 }
-
-/*
-.container {
-  width: 100%;
-  margin-inline: auto;
-} */
-
-
-
 
 p {
-  color: rgb(85, 85, 85);
+  color: var(--color-gray-3);
 }
+
+h3 {
+  color: var(--color-gray-4)
+;}
 
 img{
     border-radius: 50%;
 }
 
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+  color: var(--color-gray-4);
+}
+
+/* ICONS */
+
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
+
+/* BUTTONS */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 8px 5px;
+  width: 7rem;
+  border-radius: 20px;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: var(--color-gray-5) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+
+.btn-color-2:hover {
+  background: var(--color-gray-5);
+  color: var(--color-gray-light);
+}
+
+.btn-color-1:hover {
+  background: var(--color-gray-3)
+}
+
+.btn-color-1{
+  background: var(--color-gray-3);
+  color: var(--color-gray-light);
+}
+
+.btn-color-1:hover{
+  background: var(--color-gray-5);
+  color: var(--color-gray-4);
+}
+
+.btn-color-2 {
+  background: none;
+  color: var(--color-gray-4);
+}
+
+.btn-color-2:hover {
+  border: none;
+}
+
+.btn-container {
+  gap: 1rem;
+}
 
 
 /* TRANSITION */
@@ -104,7 +164,7 @@ a,
 
 /* NAV */
 nav {
-  background: rgba(255, 253, 253, 0.5);
+  background: var(--color-gray-1);
   display: grid;
   place-items: center;
   height: 3.8rem;
@@ -113,7 +173,7 @@ nav {
   left: 0;
   width: 100%;
   z-index: 10;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--box-shadow-1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   -moz-backdrop-filter: blur(15px);
@@ -135,7 +195,7 @@ nav {
 }
 
 .nav__menu a{
-  color: rgb(99, 99, 99);
+  color: var(--color-gray-3);
 }
 
 .nav__buttons {
@@ -179,15 +239,12 @@ nav {
 
 /* PROFILE SECTION */
 
-
-
 #profile {
   display: flex;
   justify-content: center;
   gap: 5rem;
   padding-top: 90px;
   min-height: fit-content;
-  /* margin-top: -20px; */
 }
 
 .section__pic-container {
@@ -215,11 +272,6 @@ nav {
   margin-bottom: 1rem;
 }
 
-.title {
-  font-size: 3rem;
-  text-align: center;
-}
-
 #socials-container {
   display: flex;
   justify-content: center;
@@ -228,9 +280,9 @@ nav {
 }
 
 #socials-container a{
-    color: var(--color-gray-900);
+    color: var(--color-gray-4);
     display: inline-block;
-    border-radius: var(--radius-6);
+    border-radius: var(--radius-1);
     transition: var(--transition);
     font-size: 1.2rem;
 }
@@ -241,61 +293,6 @@ nav {
     transform: translateY(-0.5rem);
 }
 
-/* ICONS */
-
-.icon {
-  cursor: pointer;
-  height: 2rem;
-}
-
-/* BUTTONS */
-
-.btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.btn {
-  font-weight: 600;
-  transition: all 300ms ease;
-  padding: 8px 5px;
-  width: 7rem;
-  border-radius: 20px;
-}
-
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(145, 145, 145) 0.1rem solid;
-}
-
-.btn-color-1:hover,
-.btn-color-2:hover {
-  cursor: pointer;
-}
-
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(145, 145, 145);
-  color: white;
-}
-
-.btn-color-1:hover {
-  background:rgb(99, 99, 99)
-}
-
-.btn-color-2 {
-  background: none;
-  color:rgb(53, 53, 53)
-}
-
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
-}
-
-.btn-container {
-  gap: 1rem;
-}
 
 /* ABOUT SECTION */
 
@@ -320,17 +317,16 @@ nav {
 }
 
 .about-pic {
-  border-radius: 50%;
+  border-radius: var(--radius-1);
 }
 
 
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  background: var(--color-gray-light);
+  border-radius: var(--radius-2);
+  border: var(--color-gray-5) 0.1rem solid;
   text-align: center;
 }
 
@@ -352,7 +348,7 @@ nav {
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
+  color: var(--color-gray-3);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -392,7 +388,7 @@ article .icon {
 }
 
 .project__categories li {
-  background-color: #d3d3d3;
+  background-color: var(--color-gray-5);
   padding: 0.4rem 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -401,8 +397,8 @@ article .icon {
 
 .project__categories li:hover,
 .project__categories .mixitup-control-active {
-  background-color:rgb(85, 85, 85);
-  color: #fff;
+  background-color: var(--color-gray-3);
+  color: var(--color-gray-light);
 }
 
 .projects__container {
@@ -432,7 +428,7 @@ article .icon {
 }
 
 .project:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  box-shadow: var(--box-shadow-1);
 }
 
 /* Buttons Container */
@@ -474,9 +470,7 @@ article .icon {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  background: (250, 250, 250);
+  border: var(--color-gray-5) 0.1rem solid;
   margin: 2rem auto;
   padding: 0.5rem;
 }
@@ -487,11 +481,11 @@ article .icon {
 }
 
 .contact__list-item{
-  background: var(--color-gray-100);
+  background: var(--color-gray-1);
   padding: 1rem;
   display: block;
   text-align: center;
-  color: var(--color-gray-900);
+  color: var(--color-gray-4);
   border-radius: 50%;
   font-size: 1.2rem;
   transition: var(--transition);
@@ -509,7 +503,7 @@ article .icon {
 
 
 footer{
-  background: hsl(var(--primary-hue), 5%, 5%);
+  background: var(--color-gray-4);
   padding-top: 2rem;
 }
 
@@ -520,12 +514,12 @@ footer{
 }
 
 .footer__menu a{
-  color: hsl(var(--primary-hue), 5%, 70%);
+  color: var(--color-gray-light-1);
   transition: var(--transition);
 }
 
 .footer__menu a:hover{
-  color: #fff;
+  color: var(--color-gray-2);
 }
 
 .footer__socials{
@@ -536,11 +530,11 @@ footer{
 }
 
 .footer__socials a{
-  background: #fff;
-  color: rgb(16, 1, 31);
+  background: var(--color-gray-light);
+  color: var(--color-gray-4);
   padding: 0.6rem;
   display: flex;
-  border-radius: 50%;
+  border-radius: var(--radius-1);
   transition: var(--transition);
 }
 
@@ -551,9 +545,9 @@ footer{
 }
 
 .footer__copyright{
-  color: hsl(var(--primary-hue), 5%, 70%);
+  color: var(--color-gray-light-1);
   text-align: center;
-  border-top: 2px solid hsl(var(--primary-hue), 5%, 25%);
+  border-top: 1px solid var(--color-gray-light);
   padding: 1.5rem 0;
 }
 
@@ -563,10 +557,10 @@ footer{
   bottom: 30px;
   right: 30px;
   display: none; /* Initially hidden */
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  border-radius: 50%;
+  background-color: var(--color-gray-2);
+  color: var(--color-gray-light-1);
+  padding: 5PX 10px;
+  border-radius: var(--radius-1);
   font-size: 20px;
   z-index: 1000;
   cursor: pointer;
@@ -574,7 +568,7 @@ footer{
 }
 
 .back-to-top:hover {
-  background-color: #555;
+  background-color: var(--color-gray-4);
   transition: var(--transition);
 }
 
