--- a/styles.css
+++ b/styles.css
@@ -301,7 +301,7 @@ nav {
 }
 
 .about-containers {
-  gap: 2rem;
+  gap: 1rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
@@ -314,6 +314,7 @@ nav {
 .about-containers,
 .about-details-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .about-pic {
@@ -343,9 +344,6 @@ nav {
 
 /* EXPERIENCE SECTION */
 
-#experience {
-  position: relative;
-}
 
 .experience-sub-title {
   color: var(--color-gray-3);
@@ -354,21 +352,19 @@ nav {
   margin-bottom: 2rem;
 }
 
-
-
 .article-container {
+  width: 100%;
   display: flex;
   text-align: initial;
   flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
+  /* flex-direction: row; */
+  gap: 1rem;
+  justify-content: space-between;
 }
 
 article {
   display: flex;
-  width: 10rem;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 0.5rem;
 }
 
@@ -377,7 +373,6 @@ article .icon {
 }
 
 /* PROJECTS SECTION */
-
 
 .project__categories {
   display: flex;
@@ -408,22 +403,16 @@ article .icon {
   padding: 2rem;
 }
 
-.project {
-  background-color: #f9f9f9;
-  padding: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  text-align: center;
-  transition: box-shadow 0.3s ease;
-}
+
 
 /* Project Card Styles */
 .project {
   border: 1px solid #ddd;
   padding: 1rem;
+  border-radius: 10px;
   margin-bottom: 1.5rem;
   text-align: center;
-  background-color: #f9f9f9;
+  background: var(--color-gray-light-1);
   transition: box-shadow 0.3s ease;
 }
 
