--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 
   --transition: all 300ms ease-in-out;
 
+  --bg-gray: rgb(224, 224, 224);
   --nav-light-bg: rgba(255, 253, 253, 0.5);
   --box-shadow-1: 0 4px 8px rgba(0, 0, 0, 0.1);
 
@@ -66,7 +67,7 @@ section {
 }
 
 section:nth-child(even){
-  background: var(--color-gray-1);
+  background: var(--bg-gray);
 }
 
 p {
@@ -233,7 +234,7 @@ nav {
   text-align: center;
   align-items: center;
   justify-content: center;
-  color: var(--color-gray-4) !important;
+  color: var(--color-gray-3) !important;
   transition: var(--transition);
 }
 
@@ -385,7 +386,8 @@ article .icon {
 }
 
 .project__categories li {
-  background-color: var(--color-gray-5);
+  color: var(--color-gray-4);
+  background-color: var(--color-gray-1);
   padding: 0.4rem 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
