--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,11 @@ html, body {
 
 body{
   font-family: "Poppins", sans-serif;
-  padding-top: 0;
+  /* padding-top: 0; */
 }
 
 main{
   flex: 1;
-  /* padding: 1rem; */
   text-align: center;
 }
 
@@ -161,7 +160,7 @@ img{
 
 a,
 .btn {
-  transition: all 300ms ease;
+  transition: var(--transition);
 }
 
 /* NAV */
