--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
   --transition: all 300ms ease-in-out;
 
   --bg-gray: rgb(224, 224, 224);
-  --nav-light-bg: rgba(255, 253, 253, 0.5);
+  --nav-bg: rgba(255, 253, 253, 0.5);
   --box-shadow-1: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   --color-gray-light: rgba(255, 255, 255, 0.945);
@@ -30,9 +30,29 @@
   --color-gray-1: rgba(255, 253, 253, 0.5);
   --color-gray-2: rgb(85, 85, 85);
   --color-gray-3: rgb(99, 99, 99);
-  --color-gray-4: rgb(53, 53, 53);
+  --color-gray-4: rgb(34, 34, 34);
   --color-gray-5: rgb(187, 181, 181);
+  --nav-hover: black;
 }
+
+/* .dark {
+
+  --bg-gray: rgb(66, 66, 66);
+  --bg-gray-2: rgb(139, 139, 139);
+  --nav-bg: rgba(76, 77, 80, 0.89);
+
+  --color-gray-light: rgba(71, 71, 71, 0.897);
+  --color-gray-light-1: rgba(63, 62, 62, 0.932);
+  --color-gray-1: rgba(129, 129, 129);
+  --color-gray-1: rgba(255, 253, 253, 0.5);
+  --color-gray-2: rgb(121, 121, 121);
+  --color-gray-4: rgb(121, 120, 120);
+  --color-gray-3:rgb(105, 105, 105);
+  --color-gray-5: rgb(129, 129, 129);
+
+  --nav-hover: white;
+} */
+
 
 
 html, body {
@@ -69,6 +89,10 @@ section {
 section:nth-child(even){
   background: var(--bg-gray);
 }
+
+/* section:nth-child(even){
+  background: var(--bg-gray-2);
+} */
 
 p {
   color: var(--color-gray-3);
@@ -165,7 +189,7 @@ a,
 
 /* NAV */
 nav {
-  background: var(--color-gray-1);
+  background: var(--nav-bg);
   display: grid;
   place-items: center;
   height: 3.8rem;
@@ -200,7 +224,7 @@ nav {
 }
 
 .nav__menu a:hover{
-  color: black;
+  color: var(--nav-hover);
 }
 
 .nav__buttons {
@@ -351,7 +375,9 @@ nav {
 
 /* EXPERIENCE SECTION */
 
-
+#experience{
+  margin-top: -32px;
+}
 .experience-sub-title {
   color: var(--color-gray-3);
   font-weight: 600;
@@ -461,6 +487,7 @@ article .icon {
   justify-content: center;
   flex-direction: column;
   height: 70vh;
+  padding-top: 20px;
 }
 
 .contact-info-upper-container {
