--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,20 @@
 } */
 
 
+::-webkit-scrollbar{
+  width: 0.5rem;
+}
+::-webkit-scrollbar-track{
+  background: transparent;
+}
+::-webkit-scrollbar-thumb{
+  background: var(--color-gray-3);
+}
+::-webkit-scrollbar-thumb:hover{
+  background: var(--color-gray-4);
+}
+
+
 
 html, body {
   width: 100%;
