--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,7 @@ article .icon {
   margin-bottom: 1.5rem;
   text-align: center;
   background: var(--color-gray-light-1);
-  transition: box-shadow 0.3s ease;
+  /* transition:  var(--transition); */
 }
 
 .project:hover {
