fix nav bug with !important

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -53,6 +53,18 @@
     }
   }
 
+  @media (min-width: 769px) {
+    .nav__menu {
+      display: flex !important;
+      align-items: center;
+      gap: 3rem;
+    }
+    .nav__toggle-open,
+    .nav__toggle-close{
+      display: none !important;
+    }
+  }
+
   @media (max-width: 768px) {
 
     .nav__menu {
@@ -67,7 +79,7 @@
 
     .nav__toggle-open,
     .nav__toggle-close {
-      display: inline-flex;
+      display: inline-flex; /* inline-flex for consistent sizing and alignment */
       font-size: 1.8rem;
       color: black;
       width: 40px; /* Ensure toggle buttons also have a fixed width */
