--- a/styles.css
+++ b/styles.css
@@ -429,19 +429,19 @@ article .icon {
   gap: 1.5rem;
   padding: 2rem;
   justify-content: center;
-  max-width: 100%;
 }
 
 
 
 .project__categories {
+
   display: flex;
   gap: 1rem;
   justify-content: center;
-  align-items: center;
-  margin: 2rem auto;
+  margin: 2rem 0;
   flex-wrap: wrap;
-
+  padding: 1rem;
+  z-index: 5;
 }
 
 .project__categories li {
@@ -471,7 +471,7 @@ article .icon {
   margin-bottom: 1.5rem;
   text-align: center;
   background: var(--color-gray-light-1);
-  transition:  var(--transition)
+  transition: box-shadow 0.3s ease;
 }
 
 .project:hover {
