--- a/styles.css
+++ b/styles.css
@@ -88,12 +88,12 @@ main{
 /* SECTIONS */
 
 section {
-  padding:  1rem;
+  padding: 90px 1rem;
   max-width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
   min-height: fit-content;
-  scroll-margin-top: 3.8rem;
+
 }
 
 .section-container {
@@ -131,6 +131,11 @@ img{
   font-size: 3rem;
   text-align: center;
   color: var(--color-gray-4);
+}
+
+#about .title, #experience .title, #projects .title, #contact .title{
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 /* ICONS */
@@ -293,9 +298,15 @@ nav {
 #profile {
   display: flex;
   justify-content: center;
-  gap: 5rem;
-  padding-top: 90px;
-  min-height: fit-content;
+  align-items: center;
+  gap: 6rem;
+  padding-top: 110px;
+  height: 100vh;
+}
+
+#profile .title{
+  padding-bottom: 20px;
+  padding-top: 10px;
 }
 
 .section__pic-container {
@@ -320,14 +331,19 @@ nav {
 
 .section__text__p2 {
   font-size: 1.75rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
+
 
 #socials-container {
   display: flex;
   justify-content: center;
   margin-top: 2rem;
   gap: 2rem;
+}
+
+#profile #socials-container{
+  margin-top: 50px;
 }
 
 #socials-container a{
@@ -391,7 +407,7 @@ nav {
 /* EXPERIENCE SECTION */
 
 #experience{
-  margin-top: -32px;
+  /* margin-top: -32px; */
   padding-left: 45px;
   padding-right: 45px;
 }
@@ -469,7 +485,7 @@ article .icon {
   padding: 1rem;
   border-radius: 10px;
   margin-bottom: 1.5rem;
-  text-align: center;
+  /* text-align: center; */
   background: var(--color-gray-light-1);
   transition: box-shadow 0.3s ease;
 }
@@ -574,7 +590,7 @@ footer{
   width: fit-content;
   display: flex;
   gap: 1.5rem;
-  margin: 1.5rem auto 2rem;
+  margin: 1.5rem auto;
 }
 
 .footer__socials a{
@@ -597,31 +613,6 @@ footer{
   text-align: center;
   border-top: 1px solid var(--color-gray-light);
   padding: 1.5rem 0;
-}
-
-
-.back-to-top {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  display: none; /* Initially hidden */
-  background-color: var(--color-gray-2);
-  color: var(--color-gray-light-1);
-  padding: 5PX 10px;
-  border-radius: var(--radius-1);
-  font-size: 20px;
-  z-index: 1000;
-  cursor: pointer;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.back-to-top:hover {
-  background-color: var(--color-gray-4);
-  transition: var(--transition);
-}
-
-.back-to-top i {
-  font-size: 1.5rem;
 }
 
 
