--- a/styles.css
+++ b/styles.css
@@ -360,6 +360,17 @@ nav {
     transform: translateY(-0.5rem);
 }
 
+.arrow-down{
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  padding-top: 110px;
+}
+
+.arrow-down img{
+  width: 100%;
+}
+
 
 /* ABOUT SECTION */
 
