--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -105,15 +105,15 @@
 
 
     .nav__menu li a{
-        background: rgb(245, 243, 243);
+        background: var(--color-bg-nav);
         padding: 1rem 4rem;
         margin-top: 2px;
         width: 100%;
         display: block;
-        border-bottom: 2px solid rgb(99, 99, 99);
+        border-bottom: 2px solid var(--color-accent);
         text-align: center;
         box-shadow: -1.5rem 5rem 5rem rgba(0, 0, 0, 0.3);
-        color: rgb(99, 99, 99);
+        color: var(--text-nav);
     }
 
     .nav__menu li {
