--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -113,7 +113,7 @@
         border-bottom: 2px solid var(--color-accent);
         text-align: center;
         box-shadow: -1.5rem 5rem 5rem rgba(0, 0, 0, 0.3);
-        color: var(--text-nav);
+        color: var(--text-p);
     }
 
     .nav__menu li {
