--- a/styles.css
+++ b/styles.css
@@ -334,7 +334,7 @@ nav img{
 }
 
 .section__text__p2 {
-  font-size: 1.75rem;
+  font-size: 1rem;
   margin-bottom: 2rem;
 }
 
@@ -364,7 +364,7 @@ nav img{
     transform: translateY(-0.5rem);
 }
 
-.arrow-down{
+/* .arrow-down{
   width: 30px;
   height: 30px;
   margin: 0 auto;
@@ -377,7 +377,7 @@ nav img{
 
 .arrow-down:hover{
   transform: translateY(-0.5rem);
-}
+} */
 
 
 /* ABOUT SECTION */
