--- a/styles.css
+++ b/styles.css
@@ -444,14 +444,14 @@ nav img{
   display: flex;
   text-align: initial;
   flex-wrap: wrap;
-  /* flex-direction: row; */
+  flex-direction: column;
   gap: 1rem;
-  justify-content: space-between;
+  justify-content:flex-start;
 }
 
 article {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 0.5rem;
 }
 
