--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,7 @@ nav img{
   justify-content: center;
   color: var(--text-p) !important;
   transition: var(--transition);
+  cursor: pointer;
 }
 
 
